--- a/Project/2025-01-31.md
+++ b/Project/2025-01-31.md
@@ -2,10 +2,14 @@
 
 * 이펙티브 자바
     1. 아이템 85. 자바 직렬화의 대안을 찾으라
+        * 자바에서 직렬화, 역직렬화 과정을 이용해서 공격하는 경우가 있으니 JSON이나 프로토콜 버퍼 사용을 권장
     2. 아이템 86. Serializable을 구현할지는 신중히 결정하라
     3. 아이템 87. 커스텀 직렬화 형태를 고려해보라
     4. 아이템 88. readObject 메서드는 방어적으로 작성하라
+        * 직렬화, 역직렬화 과정 중에 객체의 불변성이 지켜지지 않을 수 있으므로 주의해야한다
+-> 
 
 ### ToDoList
 * 이펙티브 자바 12장(직렬화) 읽기
 * ERD 정리
+* 프로젝트 코드/설정 정리
